fix(darkmode): changing dark mode colors

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -15,7 +15,7 @@
   --default-background: #1E1E1E;
   --secondary-background: #252525;
   --dark-background: #000000;
-  --details-background: #1C1C1C;
+  --details-background: #141414;
   --default-text: #FFFFFF;
   --secondary-text: #A8A8A8;
   --disabled-text: #707070;
